braulio es un #pajaroHater

--- a/ECCI_Gato/Web.config
+++ b/ECCI_Gato/Web.config
@@ -122,7 +122,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ECCI_GatoBinding" />
+        <binding name="ECCI_GatoBinding" allowCookies="True"/>
       </basicHttpBinding>
     </bindings>
     <client>
