--- a/ECCI_Gato/bin/ECCI_Gato.dll.config
+++ b/ECCI_Gato/bin/ECCI_Gato.dll.config
@@ -122,7 +122,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ECCI_GatoBinding" />
+        <binding name="ECCI_GatoBinding" allowCookies="True"/>
       </basicHttpBinding>
     </bindings>
     <client>
